-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.1
-
CPU: 16x Intel(R) Core(TM) i7-10875H CPU @ 2.30GHz
Memory: 16.63 GB (used: 3.07 GB)
GPUs:
GPU 0:
Name: NVIDIA Corporation TU106M [GeForce RTX 2060 Mobile]
IDs: D=1f15 V=10de SD=3fa9 SV=17aa
Driver: nvidia
GPU 1:
Name: Intel Corporation CometLake-H GT2 [UHD Graphics]
IDs: D=9bc4 V=8086 SD=3fa9 SV=17aa
Driver: i915
OS: Arch Linux 6.9.3-arch1-1 (linux)CPU: 16x Intel(R) Core(TM) i7-10875H CPU @ 2.30GHz Memory: 16.63 GB (used: 3.07 GB) GPUs: GPU 0: Name: NVIDIA Corporation TU106M [GeForce RTX 2060 Mobile] IDs: D=1f15 V=10de SD=3fa9 SV=17aa Driver: nvidia GPU 1: Name: Intel Corporation CometLake-H GT2 [UHD Graphics] IDs: D=9bc4 V=8086 SD=3fa9 SV=17aa Driver: i915 OS: Arch Linux 6.9.3-arch1-1 (linux)
-
-
3b609b112 (dev), 46ffaed90 (6.7.2), d90e2a12e (6.8), 588d317f4 (6.7)
Installing qtcreator through package management in current arhclinux will trigger an issue where editing a currently owned. ui file or creating a new project while editing the. ui file will result in segmentation errors and crashes. This is a 100% triggering issue, not a random occurrence.
The following is the reproduction process and some additional information:
Steps to reproduce
- Place 2 QPushButton and one QLabel on a form
- Keep on clicking the 3 widgets round-robin
- Observe crash after approx 2 rounds
1. Open qtcreator
2. Edit the. ui file in the added controls (such as pushbuttons), select these controls by clicking, try a few more times, and (more than 8 times) it will crash.
3. This issue will be triggered 100%, and the gdb. txt in the attachment is
$coredumpctl gdb (then answer y when it asks "Enable debuginfo for this session?")
(gdb) set logging enabled
(gdb) bt (or bt full)
Coredump.txt is the result of the coredumpctl list
{color:#FF0000}This is one of the situations{color} (gdb) run Starting program: /usr/bin/qtcreator [Thread debugging using libthread_db enabled] Using host libthread_db library "/usr/lib/libthread_db.so.1". [New Thread 0x7ffff10006c0 (LWP 9343)] [New Thread 0x7fffebe006c0 (LWP 9344)] [New Thread 0x7fffeac006c0 (LWP 9345)] [New Thread 0x7fffea2006c0 (LWP 9346)] [New Thread 0x7fffe98006c0 (LWP 9347)] [New Thread 0x7fffe8e006c0 (LWP 9348)] [New Thread 0x7fffe0a006c0 (LWP 9349)] [New Thread 0x7fffd7e006c0 (LWP 9350)] [New Thread 0x7fffd74006c0 (LWP 9351)] [New Thread 0x7fffd6a006c0 (LWP 9352)] onnectionEditorButtonBorder_hover". [New Thread 0x7fff91e006c0 (LWP 9353)] [New Thread 0x7fff914006c0 (LWP 9354)] [Detaching after vfork from child process 9355] [New Thread 0x7fff90a006c0 (LWP 9356)] [New Thread 0x7fff8be006c0 (LWP 9357)] [New Thread 0x7fff8b4006c0 (LWP 9358)] [New Thread 0x7fff8aa006c0 (LWP 9359)] [Thread 0x7fff8aa006c0 (LWP 9359) exited] [Thread 0x7fff8b4006c0 (LWP 9358) exited] [Detaching after vfork from child process 9360] [New Thread 0x7fff8b4006c0 (LWP 9361)] [Thread 0x7fff8b4006c0 (LWP 9361) exited] [Detaching after vfork from child process 9362] [New Thread 0x7fff8b4006c0 (LWP 9363)] [Thread 0x7fff8b4006c0 (LWP 9363) exited] [New Thread 0x7fff8b4006c0 (LWP 9364)] [New Thread 0x7fff8aa006c0 (LWP 9365)] [New Thread 0x7fff8a0006c0 (LWP 9366)] [New Thread 0x7fff896006c0 (LWP 9367)] [New Thread 0x7fff88c006c0 (LWP 9368)] [New Thread 0x7fff7fe006c0 (LWP 9369)] [New Thread 0x7fff7f4006c0 (LWP 9370)] [New Thread 0x7fff7ea006c0 (LWP 9371)] [New Thread 0x7fff7e0006c0 (LWP 9372)] [New Thread 0x7fff7d6006c0 (LWP 9373)] [New Thread 0x7fff7cc006c0 (LWP 9374)] [New Thread 0x7fff73e006c0 (LWP 9375)] [New Thread 0x7fff734006c0 (LWP 9376)] [New Thread 0x7fff72a006c0 (LWP 9377)] [New Thread 0x7fff720006c0 (LWP 9378)] [New Thread 0x7fff716006c0 (LWP 9379)] [New Thread 0x7fff70c006c0 (LWP 9380)] [New Thread 0x7fff67e006c0 (LWP 9381)] [New Thread 0x7fff674006c0 (LWP 9382)] [New Thread 0x7fff66a006c0 (LWP 9383)] [New Thread 0x7fff660006c0 (LWP 9384)] [New Thread 0x7fff656006c0 (LWP 9385)] [New Thread 0x7fff64c006c0 (LWP 9386)] [New Thread 0x7fff5be006c0 (LWP 9387)] [New Thread 0x7fff5b4006c0 (LWP 9388)] [New Thread 0x7fff5aa006c0 (LWP 9389)] [New Thread 0x7fff5a0006c0 (LWP 9390)] [New Thread 0x7fff596006c0 (LWP 9391)] [New Thread 0x7fff58c006c0 (LWP 9392)] [New Thread 0x7fff4fe006c0 (LWP 9393)] [New Thread 0x7fff4f4006c0 (LWP 9394)] [New Thread 0x7fff4ea006c0 (LWP 9395)] [Detaching after vfork from child process 9396] [New Thread 0x7fff4e0006c0 (LWP 9397)] [Thread 0x7fff4e0006c0 (LWP 9397) exited] [Detaching after vfork from child process 9398] [New Thread 0x7fff4e0006c0 (LWP 9399)] [Thread 0x7fff4e0006c0 (LWP 9399) exited] [Detaching after vfork from child process 9400] [New Thread 0x7fff4e0006c0 (LWP 9401)] [Thread 0x7fff4e0006c0 (LWP 9401) exited] [New Thread 0x7fff4e0006c0 (LWP 9405)] kf.sonnet.core: No language dictionaries for the language: "en_US" QFSFileEngine::open: No file name specified [Detaching after vfork from child process 9411] [New Thread 0x7fff434006c0 (LWP 9412)] [Thread 0x7fff434006c0 (LWP 9412) exited] [Detaching after vfork from child process 9413] [New Thread 0x7fff434006c0 (LWP 9414)] [Thread 0x7fff434006c0 (LWP 9414) exited] [New Thread 0x7fff434006c0 (LWP 9416)] [New Thread 0x7fff42a006c0 (LWP 9417)] [New Thread 0x7fff420006c0 (LWP 9418)] [New Thread 0x7fff37e006c0 (LWP 9419)] [New Thread 0x7fff374006c0 (LWP 9420)] [New Thread 0x7fff36a006c0 (LWP 9421)] [New Thread 0x7fff360006c0 (LWP 9422)] [New Thread 0x7fff356006c0 (LWP 9423)] [New Thread 0x7fff34c006c0 (LWP 9424)] [New Thread 0x7fff2be006c0 (LWP 9425)] [New Thread 0x7fff2b4006c0 (LWP 9426)] [New Thread 0x7fff2aa006c0 (LWP 9427)] [New Thread 0x7fff2a0006c0 (LWP 9428)] [New Thread 0x7fff296006c0 (LWP 9429)] [New Thread 0x7fff28c006c0 (LWP 9430)] [New Thread 0x7fff1fe006c0 (LWP 9431)] [Thread 0x7fff42a006c0 (LWP 9417) exited] [New Thread 0x7fff42a006c0 (LWP 9437)] [Detaching after vfork from child process 9438] [New Thread 0x7fff1f4006c0 (LWP 9439)] [Thread 0x7fff1f4006c0 (LWP 9439) exited] [Detaching after vfork from child process 9442] [New Thread 0x7fff1f4006c0 (LWP 9443)] [Thread 0x7fff1f4006c0 (LWP 9443) exited] [Detaching after vfork from child process 9444] [New Thread 0x7fff1f4006c0 (LWP 9445)] [Thread 0x7fff1f4006c0 (LWP 9445) exited] [New Thread 0x7fff1f4006c0 (LWP 9446)] [New Thread 0x7fff1ea006c0 (LWP 9447)] [Detaching after vfork from child process 9448] [New Thread 0x7fff1e0006c0 (LWP 9450)] [Detaching after vfork from child process 9449] [New Thread 0x7fff1d6006c0 (LWP 9453)] [Detaching after vfork from child process 9451] [New Thread 0x7fff1cc006c0 (LWP 9454)] [New Thread 0x7fff13e006c0 (LWP 9455)] [New Thread 0x7fff134006c0 (LWP 9456)] [Thread 0x7fff134006c0 (LWP 9456) exited] [Thread 0x7fff13e006c0 (LWP 9455) exited] [New Thread 0x7fff12a006c0 (LWP 9457)] [New Thread 0x7fff120006c0 (LWP 9458)] [Thread 0x7fff1e0006c0 (LWP 9450) exited] [Detaching after vfork from child process 9459] [New Thread 0x7fff1e0006c0 (LWP 9460)] [Thread 0x7fff12a006c0 (LWP 9457) exited] [Thread 0x7fff120006c0 (LWP 9458) exited] [Detaching after vfork from child process 9462] [New Thread 0x7fff120006c0 (LWP 9463)] [Thread 0x7fff1e0006c0 (LWP 9460) exited] [New Thread 0x7fff1e0006c0 (LWP 9464)] [New Thread 0x7fff12a006c0 (LWP 9465)] [New Thread 0x7fff134006c0 (LWP 9466)] [Detaching after vfork from child process 9467] [New Thread 0x7fff13e006c0 (LWP 9468)] [Thread 0x7fff13e006c0 (LWP 9468) exited] [Detaching after vfork from child process 9469] [New Thread 0x7fff13e006c0 (LWP 9470)] [Thread 0x7fff13e006c0 (LWP 9470) exited] [New Thread 0x7fff13e006c0 (LWP 9471)] [New Thread 0x7fff116006c0 (LWP 9472)] [Detaching after vfork from child process 9473] [New Thread 0x7fff10c006c0 (LWP 9485)] [New Thread 0x7fff07e006c0 (LWP 9486)] [New Thread 0x7fff074006c0 (LWP 9487)] [New Thread 0x7fff06a006c0 (LWP 9488)] [Detaching after vfork from child process 9499] [New Thread 0x7fff060006c0 (LWP 9500)] [Thread 0x7fff060006c0 (LWP 9500) exited] [Detaching after vfork from child process 9502] [New Thread 0x7fff060006c0 (LWP 9504)] [Thread 0x7fff060006c0 (LWP 9504) exited] [New Thread 0x7fff060006c0 (LWP 9505)] [Detaching after vfork from child process 9506] Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault.
---------------------------------------------------------------------------------------------------------------------------------------
This is another situation
{color:#172b4d}(gdb) run Starting program: /usr/bin/qtcreator [Thread debugging using libthread_db enabled] Using host libthread_db library "/usr/lib/libthread_db.so.1". [New Thread 0x7ffff10006c0 (LWP 10716)] [New Thread 0x7fffebe006c0 (LWP 10717)] [New Thread 0x7fffeac006c0 (LWP 10718)] [New Thread 0x7fffea2006c0 (LWP 10719)] [New Thread 0x7fffe98006c0 (LWP 10720)] [New Thread 0x7fffe8e006c0 (LWP 10721)] [New Thread 0x7fffe0a006c0 (LWP 10722)] [New Thread 0x7fffd7e006c0 (LWP 10723)] [New Thread 0x7fffd74006c0 (LWP 10724)] [New Thread 0x7fffd6a006c0 (LWP 10725)] onnectionEditorButtonBorder_hover". [New Thread 0x7fff91e006c0 (LWP 10726)] [New Thread 0x7fff914006c0 (LWP 10727)] [Detaching after vfork from child process 10728] [New Thread 0x7fff90a006c0 (LWP 10729)] [New Thread 0x7fff8be006c0 (LWP 10730)] [New Thread 0x7fff8b4006c0 (LWP 10731)] [New Thread 0x7fff8aa006c0 (LWP 10732)] [Thread 0x7fff8aa006c0 (LWP 10732) exited] [Thread 0x7fff8b4006c0 (LWP 10731) exited] [Detaching after vfork from child process 10733] [New Thread 0x7fff8b4006c0 (LWP 10734)] [Thread 0x7fff8b4006c0 (LWP 10734) exited] [Detaching after vfork from child process 10735] [New Thread 0x7fff8b4006c0 (LWP 10736)] [Thread 0x7fff8b4006c0 (LWP 10736) exited] [New Thread 0x7fff8b4006c0 (LWP 10737)] [New Thread 0x7fff8aa006c0 (LWP 10738)] [New Thread 0x7fff8a0006c0 (LWP 10739)] [New Thread 0x7fff896006c0 (LWP 10740)] [New Thread 0x7fff88c006c0 (LWP 10741)] [New Thread 0x7fff7fe006c0 (LWP 10742)] [New Thread 0x7fff7f4006c0 (LWP 10743)] [New Thread 0x7fff7ea006c0 (LWP 10744)] [New Thread 0x7fff7e0006c0 (LWP 10745)] [New Thread 0x7fff7d6006c0 (LWP 10746)] [New Thread 0x7fff7cc006c0 (LWP 10747)] [New Thread 0x7fff73e006c0 (LWP 10748)] [New Thread 0x7fff734006c0 (LWP 10749)] [New Thread 0x7fff72a006c0 (LWP 10750)] [New Thread 0x7fff720006c0 (LWP 10751)] [New Thread 0x7fff716006c0 (LWP 10752)] [New Thread 0x7fff70c006c0 (LWP 10753)] [New Thread 0x7fff67e006c0 (LWP 10754)] [New Thread 0x7fff674006c0 (LWP 10755)] [New Thread 0x7fff66a006c0 (LWP 10756)] [New Thread 0x7fff660006c0 (LWP 10757)] [New Thread 0x7fff656006c0 (LWP 10758)] [New Thread 0x7fff64c006c0 (LWP 10759)] [New Thread 0x7fff5be006c0 (LWP 10760)] [New Thread 0x7fff5b4006c0 (LWP 10761)] [New Thread 0x7fff5aa006c0 (LWP 10762)] [New Thread 0x7fff5a0006c0 (LWP 10763)] [New Thread 0x7fff596006c0 (LWP 10764)] [New Thread 0x7fff58c006c0 (LWP 10765)] [New Thread 0x7fff4fe006c0 (LWP 10766)] [New Thread 0x7fff4f4006c0 (LWP 10767)] [New Thread 0x7fff4ea006c0 (LWP 10768)] [Detaching after vfork from child process 10770] [New Thread 0x7fff4e0006c0 (LWP 10771)] [Thread 0x7fff4e0006c0 (LWP 10771) exited] [Detaching after vfork from child process 10772] [New Thread 0x7fff4e0006c0 (LWP 10773)] [Thread 0x7fff4e0006c0 (LWP 10773) exited] [Detaching after vfork from child process 10774] [New Thread 0x7fff4e0006c0 (LWP 10775)] [Thread 0x7fff4e0006c0 (LWP 10775) exited] [New Thread 0x7fff4e0006c0 (LWP 10782)] kf.sonnet.core: No language dictionaries for the language: "en_US" QFSFileEngine::open: No file name specified [Detaching after vfork from child process 10790] [New Thread 0x7fff434006c0 (LWP 10791)] [Thread 0x7fff434006c0 (LWP 10791) exited] [Detaching after vfork from child process 10792] [New Thread 0x7fff434006c0 (LWP 10793)] [Thread 0x7fff434006c0 (LWP 10793) exited] [New Thread 0x7fff434006c0 (LWP 10795)] [New Thread 0x7fff42a006c0 (LWP 10796)] [New Thread 0x7fff420006c0 (LWP 10797)] [New Thread 0x7fff37e006c0 (LWP 10798)] [New Thread 0x7fff374006c0 (LWP 10799)] [New Thread 0x7fff36a006c0 (LWP 10800)] [New Thread 0x7fff360006c0 (LWP 10801)] [New Thread 0x7fff356006c0 (LWP 10802)] [New Thread 0x7fff34c006c0 (LWP 10803)] [New Thread 0x7fff2be006c0 (LWP 10804)] [New Thread 0x7fff2b4006c0 (LWP 10805)] [New Thread 0x7fff2aa006c0 (LWP 10806)] [New Thread 0x7fff2a0006c0 (LWP 10807)] [New Thread 0x7fff296006c0 (LWP 10808)] [Thread 0x7fff434006c0 (LWP 10795) exited] [New Thread 0x7fff434006c0 (LWP 10814)] [Detaching after vfork from child process 10815] [New Thread 0x7fff28c006c0 (LWP 10816)] [Thread 0x7fff28c006c0 (LWP 10816) exited] [Detaching after vfork from child process 10818] [New Thread 0x7fff28c006c0 (LWP 10819)] [Thread 0x7fff28c006c0 (LWP 10819) exited] [Detaching after vfork from child process 10820] [New Thread 0x7fff28c006c0 (LWP 10821)] [Thread 0x7fff28c006c0 (LWP 10821) exited] [New Thread 0x7fff28c006c0 (LWP 10822)] [New Thread 0x7fff1fe006c0 (LWP 10823)] [Detaching after vfork from child process 10824] [New Thread 0x7fff1f4006c0 (LWP 10827)] [Detaching after vfork from child process 10825] [Detaching after vfork from child process 10826] [New Thread 0x7fff1ea006c0 (LWP 10829)] [New Thread 0x7fff1e0006c0 (LWP 10830)] [New Thread 0x7fff1d6006c0 (LWP 10831)] [New Thread 0x7fff1cc006c0 (LWP 10832)] [Thread 0x7fff1e0006c0 (LWP 10830) exited] [New Thread 0x7fff13e006c0 (LWP 10833)] [Thread 0x7fff1d6006c0 (LWP 10831) exited] [New Thread 0x7fff1e0006c0 (LWP 10834)] [Thread 0x7fff13e006c0 (LWP 10833) exited] [Thread 0x7fff1f4006c0 (LWP 10827) exited] [Detaching after vfork from child process 10835] [New Thread 0x7fff1f4006c0 (LWP 10836)] [Thread 0x7fff1e0006c0 (LWP 10834) exited] [Detaching after vfork from child process 10838] [Thread 0x7fff1f4006c0 (LWP 10836) exited] [New Thread 0x7fff1f4006c0 (LWP 10839)] [New Thread 0x7fff1e0006c0 (LWP 10840)] [New Thread 0x7fff13e006c0 (LWP 10841)] [New Thread 0x7fff1d6006c0 (LWP 10842)] [Detaching after vfork from child process 10843] [New Thread 0x7fff134006c0 (LWP 10844)] [Thread 0x7fff134006c0 (LWP 10844) exited] [Detaching after vfork from child process 10845] [New Thread 0x7fff134006c0 (LWP 10846)] [Thread 0x7fff134006c0 (LWP 10846) exited] [New Thread 0x7fff134006c0 (LWP 10847)] [New Thread 0x7fff12a006c0 (LWP 10848)] [Detaching after vfork from child process 10849] [New Thread 0x7fff120006c0 (LWP 10865)] [New Thread 0x7fff116006c0 (LWP 10866)] [New Thread 0x7fff10c006c0 (LWP 10867)] [New Thread 0x7fff07e006c0 (LWP 10868)] [New Thread 0x7fff074006c0 (LWP 10875)] [New Thread 0x7fff06a006c0 (LWP 10876)] [New Thread 0x7fff060006c0 (LWP 10877)] [Detaching after vfork from child process 10883] [New Thread 0x7fff056006c0 (LWP 10885)] [Thread 0x7fff056006c0 (LWP 10885) exited] [Detaching after vfork from child process 10886] [New Thread 0x7fff056006c0 (LWP 10887)] [Thread 0x7fff056006c0 (LWP 10887) exited] [New Thread 0x7fff056006c0 (LWP 10889)] [Detaching after vfork from child process 10890] Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault. 0x00007fffbbcf1d7d in ?? () from /usr/lib/libQt6DesignerComponents.so.6
- is duplicated by
-
QTCREATORBUG-31031 Crash on UI Designer
-
- Closed
-
-
QTCREATORBUG-31060 Random Crashes in UI designer on KDE Plasma
-
- Closed
-
-
QTCREATORBUG-31189 QtCreator & Designer6 crash SigFault at DesignerPropertyManager::unitializeProperty
-
- Closed
-
- relates to
-
QTBUG-121823 Qt Designer: Support Qt 6.7 icon themes
-
- Closed
-