Qt Designer: Fix crash in the property editor

The order of statements when destroying the property
is relevant.

Amends c3aa524ec33d329b275680d9dd36b283b35a4154.

Pick-to: 6.7 6.7.2
Fixes: QTBUG-126182
Task-number: QTBUG-121823
Change-Id: Ic4583796e80525f29f5f517d6f4f3087bdb95708
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 3b609b112f5a27d41c35666fad137e494c8fa3a6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>